[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "demanuf"
version = "0.1.0"
description = "Holonic Demanufacturing Coordination Architecture — research prototype"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
plot = ["matplotlib>=3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
